Layout: fix time/date header overlapping search bar

--- a/LIV-Chrome Theme Extension/css/styles.css
+++ b/LIV-Chrome Theme Extension/css/styles.css
@@ -60,7 +60,7 @@ html, body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: -0.2rem;
+  margin-bottom: 1.2rem;
   user-select: none;
 }
 
